Verhalen page done except some overflow issues...

--- a/verhalen.css
+++ b/verhalen.css
@@ -40,8 +40,8 @@ p {
 }
 .box {
     margin-top: 30%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
     text-align: center;
 }
 
